---
source: src/lib/codegen/templates.rs
expression: "root_cargo_toml(project_ids.clone(), true, false)"
---
[workspace]
members = ["canisters/sample_snapshot", "logics/sample_snapshot", "canisters/sample_lens", "logics/sample_lens", "canisters/sample_relayer", "logics/sample_relayer", "bindings/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
candid = "0.8"
ic-cdk = "0.8"
ic-cdk-macros = "0.6.10"
ic-cdk-timers = "0.1"
ic-stable-structures = "0.5.5"
serde = "1.0.163"
serde_bytes = "0.11.12"
hex = "0.4.3"

ic-web3-rs = { version = "0.1.2" }
ic-solidity-bindgen = { version = "0.1.8" }
chainsight-cdk-macros = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "0fb4629f66620ac06dbcedc82f435341bdbee985" }
chainsight-cdk = { git = "https://github.com/horizonx-tech/chainsight-sdk.git", rev = "0fb4629f66620ac06dbcedc82f435341bdbee985" }

